--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,10 @@ services:
     volumes:
        - .:/opt/app/server:delegated
        - server_node_modules:/opt/app/server/node_modules
-    env_file:
-      - ./server/.env
+    environment:
+      - SERVER_PORT=${SERVER_PORT}
     ports:
-      - ${SERVER_PORT}:4000
+      - ${SERVER_PORT:-4001}:${SERVER_PORT:-4001}
   client:
     container_name: client
     command: bash -c 'npm run start'
@@ -23,10 +23,10 @@ services:
     volumes:
       - .:/opt/app/client:delegated
       - client_node_modules:/opt/app/client/node_modules
-    env_file:
-      - ./client/.env
+    environment:
+      - PORT=${PORT}
     ports:
-      - ${PORT}:3000
+      - ${PORT:-4000}:${PORT:-4000}
 
 volumes:
   client_node_modules:
