--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,7 +4,7 @@ RUN apk update
 RUN apk add openssl
 RUN apk add bash
 
-WORKDIR /opt/app
+WORKDIR /opt/app/server
 
 COPY package.json package-lock.json ./
 
