--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "compile": "tsc",
     "build:": "npm run compile && node ./dist/src/index.js",
-    "dev": "ts-node-dev --no-notify --transpile-only ./src/index.ts"
+    "dev": "ts-node-dev --no-notify --transpile-only ./src/index.ts",
+    "test": "jest --watch"
   },
   "keywords": [],
   "author": "",
@@ -23,11 +24,18 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.3",
+    "@babel/preset-env": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@types/cors": "^2.8.17",
+    "@types/jest": "^29.5.10",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.10.0",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
     "prisma": "^5.6.0",
+    "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.2"
   }
