--- a/server/package.json
+++ b/server/package.json
@@ -23,8 +23,7 @@
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^9.0.2",
-    "lodash": "^4.17.21",
-    "redis": "^4.6.11"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@babel/core": "^7.23.3",
