feat: add README

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
-PORT=
-SERVER_PORT=
+PORT=3000
+SERVER_PORT=4001
 MOVIE_DB_API_KEY=
 MOVIE_DB_READ_ACCESS_TOKEN=
 
-POSTGRES_PORT=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
-POSTGRES_HOST_NAME=
+POSTGRES_PORT=5432
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=password
+POSTGRES_DB=main
+POSTGRES_HOST_NAME=postgres
 
 DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST_NAME}:${POSTGRES_PORT}/${POSTGRES_DB}?schema=public"
